fix: make the scrollbar inside

--- a/src/styles/common/globals.scss
+++ b/src/styles/common/globals.scss
@@ -20,7 +20,7 @@ body {
   }
 
   &::-webkit-scrollbar-thumb {
-    background: rgba(196, 196, 196, 0.2);
+    background: #c4c4c488;
     border-radius: 10px;
   }
 }
@@ -49,7 +49,7 @@ body {
   }
 
   &::-webkit-scrollbar-thumb {
-    background: rgba(196, 196, 196, 0.2);
+    background: #c4c4c488;
     border-radius: 10px;
   }
 }
